frontend/src/styles/components/_sign-up.scss
.slideout--signup {
    .slideout__inner {
        padding: 30px 25px;
        @include mq("desktop") {
            width: 720px;
        }

        @include mq("mobile") {
            width: 543px;
        }
    }
    .bed_form {
        // Need to force width outside of container because of scrollbar
        @include mq("desktop") {
            width: 665px;
        }
    }
    .forminvalid {
        border-color: #FF0000;
    }
    .check-wrap {
        border: 2px solid transparent;
        display: inline-block;
        width: 16px;
        height: 16px;
        float: left;
        margin-top: 5px;
    }
    .forminvaliddiv {
        border: 2px solid red;
    }
    &._is_open {
        display: block;
    }
    h2 {
        color: #333e48;
        font-size: 21px;
        line-height: 24px;
        @include mq("mobile") {
            font-size: 58px;
            line-height: 60px;
        }
    }
    h3 {
        padding: 25px 0 5px 0;
        color: #333e48;
        font-weight: bold;
    }
    .red {
        color: #ff0000;
    }
    .required-fields {
        color: #8c8f91;
        @include mq("mobile") {
            font-size: 22px;
            padding-bottom: 0;
        }
    }
    input, select {
        color: #333e48;
        background-color: #fff;
        box-shadow: 0 2px 2px rgba(33, 30, 31, 0.25);
        margin-right: 15px;
        @include mq("desktop") {
            width: 315px;
            height: 31px;
            font-size: 15px;
            border-radius: 6px/4px;
            margin-bottom: 10px;
        }

        @include mq("mobile") {
            width: 490px;
            height: 78px;
            font-size: 32px;
            font-family: font("gill sans", "regular");
            border-radius: 10px;
            padding-left: 25px;
            margin-bottom: 25px;
        }

        &.placeholder {
            color: #8c8f91;
        }

        @include placeholder {
            color: #8c8f91;
        }

        &.email {
            //margin-right: 386px;
       
        }
        &.first-name {
            @include mq("desktop") {
                width: 240px;
            }

            @include mq("mobile") {
                width: 385px;
            }
        }
        &.middle-initial {
            width: 56px;
            @include mq("mobile") {
                margin-right: 0;
                width: 80px;
            }
        }
        &.state, &.zip {
            width: 148px;
        }
        &.optin {
            width: auto;
            height: auto;
            margin: 0 5px 0 0;
            box-shadow: none;
            float: left;
        }
        &.submit {
            width: 295px;
            display: block;
            margin: 0 auto 30px auto;
            background-color: #333e48;
            color: #febd3f;
            font-size: 18px;
            font-family: font("gill sans", "roman");
            @include mq("mobile") {
                margin: 15px 0 150px 0;
            }
        }
    }
    .optin-label {
        color: #333e48;
    }
}

